MINOR: address code quality issues.